Time: 0 ms (100.00%) | Memory: 41.9 MB (7.98%) - LeetSync